# passes-rs

./: Cargo.toml
examples/pass-generator/src/: main.rs
src/: package.rs
src/package/: manifest.rs  sign.rs
