[package]
name = "passes"
description = "Rust library for generate Apple Wallet Passes for iOS, WatchOS, MacOS."
version = "1.0.1"
edition = "2021"
authors = ["Mark Vodyanitskiy <mvodya@icloud.com>"]
license = "MIT"
readme = "README.md"
include = ["src/", "LICENSE", "README.md"]
keywords = ["passkit", "wallet", "apple"]
categories = ["parsing"]
documentation = "https://docs.rs/passes/latest/passes/"
repository = "https://github.com/mvodya/passes-rs"

[workspace]
members = [
  "examples/pass-generator",
  "examples/pass-generator-dal"
]

[dependencies]
chrono = "0.4.34"
hex = "0.4.3"
is_empty = "0.2.0"
x509-cert = "0.2.5"
sha1 = "0.10.6"
rcgen = "0.9"
rustls = "0.20"
rustls-pemfile = "2.1.1"
cms = { version = "0.2.0", features = ["builder"] }
sha2 = "0.10.0"
der = "0.7.0"
regex = "1.10.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
zip = "0.6.6"
const-oid = "0.9"