[package]
name = "passes"
description = "Rust library for generate Apple Wallet Passes for iOS, WatchOS, MacOS."
version = "1.0.1"
edition = "2021"
authors = ["Mark Vodyanitskiy <mvodya@icloud.com>"]
license = "MIT"
readme = "README.md"
include = ["src/", "LICENSE", "README.md"]
keywords = ["passkit", "wallet", "apple"]
categories = ["parsing"]
documentation = "https://docs.rs/passes/latest/passes/"
repository = "https://github.com/mvodya/passes-rs"

[workspace]
members = [
  "examples/pass-generator",
  "examples/pass-generator-dal"
]

[dependencies]
chrono = "0.4"
cms = { version = "0.2.3", features = ["builder"] }
const-oid = "0.9.6"
der = "0.7"
hex = "0.4.3"
is_empty = "0.2.0"
regex = "1.9.4"
rsa = { version = "0.9.6", features = ["pkcs5", "sha2"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha1 = "0.10.5"
signature = "2.2.0"
spki = "0.7.3"
x509-cert = "0.2.4"
zip = "0.6.6"
